# horcrux

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yaml  litellm_config.yaml  pyproject.toml
data/overrides/: character_overrides.json
data_lake/: README.md
docs/: horcrux_system_design.md
docs/adr/: MANIFEST.md
docs/adr/pending/: ADR-0001-dual-orchestrator-architecture.md  ADR-0002-litellm-proxy-for-model-routing.md  ADR-0003-interactive-clarification-via-langgraph-interrupts.md  ADR-0004-centralised-config-via-pydantic-settings.md  ADR-0005-pdf-outline-as-chapter-source-of-truth.md  ADR-0006-three-tier-character-discovery.md  ADR-0007-temporal-forward-ocr-pipeline.md  ADR-0008-qdrant-for-the-lab-opensearch-for-production.md  ADR-0009-research-mode-planner-aggregator.md
docs/lab/: character-discovery-deep-dive.md  findings.md  linkedin-post.md  long-form-article.md  toolchain-path.md
docs/log/: 2026-04-24.md  2026-04-25.md  2026-04-26.md
horcrux/: agents.py  aggregator.py  bm25.py  chapters.py  characters.py  chunking.py  cleansing.py  config.py  conversation.py  embedding.py  ingest.py  main.py  models.py  ocr.py  planner.py  query_rewrite.py  research_graph.py  retrieval.py  retrieval_graph.py  worker.py
horcrux/agents/: __init__.py  aggregator.py  planner.py
horcrux/chat/: __init__.py
horcrux/corpus/: __init__.py  characters.py  ocr.py
horcrux/pipelines/ocr/: activities.py  workflow.py
horcrux/research/: __init__.py  graph.py  renderer.py
horcrux/retrieval/: __init__.py  graph.py  query_rewrite.py  search.py
scripts/: answer.py  build_chapters.py  build_character_aliases.py  build_chunks.py  build_embeddings.py  chat.py  inspect_chapters.py  research.py  search.py  temporal-dev.sh  temporal_demo_trigger.py  temporal_demo_worker.py  temporal_demo_workflow.py  test_chapter_regex.py  test_pdf.py  test_speed.py
tests/: conftest.py
tests/unit/: test_agents.py  test_bm25.py  test_chapters.py  test_characters.py  test_chunking.py  test_cleansing.py  test_config.py  test_conversation.py  test_query_rewrite.py  test_research.py  test_retrieval.py  test_retrieval_graph.py
