[project]
name = "horcrux"
version = "0.1.0"
description = "Deep research agent over a literary corpus — weekend lab evaluating PydanticAI + LangGraph + Temporal + Qdrant + LiteLLM + LangSmith."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # ── Data pipeline ─────────────────────────────────────────────
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",

    # ── Orchestration ─────────────────────────────────────────────
    "temporalio>=1.6.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # ── Agents ────────────────────────────────────────────────────
    "pydantic-ai>=0.0.14",
    "anthropic>=0.40.0",

    # ── Routing / observability ───────────────────────────────────
    "litellm>=1.50.0",

    # ── Config / IO ───────────────────────────────────────────────
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["horcrux"]

# ── Ruff ──────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "C90",  # mccabe complexity
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]      # `assert` is fine in tests, not elsewhere
"scripts/**" = ["S101"]    # exploratory scripts may use assert

# ── Pytest ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated, no external services",
    "integration: hits local Qdrant / Temporal / LiteLLM proxy",
    "smoke: end-to-end sanity checks against a running stack",
]
testpaths = ["tests"]
