[project]
name = "horcrux"
version = "0.1.0"
description = "Deep research agent over a literary corpus — weekend lab evaluating PydanticAI + LangGraph + Temporal + Qdrant + LiteLLM + LangSmith."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # ── Data pipeline ─────────────────────────────────────────────
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
    "spacy>=3.7.0",                          # NER for character discovery (Tier 1a)
    "en-core-web-sm",                        # spaCy English NER model — pinned via [tool.uv.sources]
    "rapidfuzz>=3.0.0",                      # fuzzy string similarity for clustering
    "fastcoref>=2.1.0",                      # transformer-based coref resolution (Tier 1b)
    "transformers<4.50",                     # fastcoref incompat with 4.50+ (api rename) — bump when upstream catches up

    # ── Orchestration ─────────────────────────────────────────────
    "temporalio>=1.6.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # ── Agents ────────────────────────────────────────────────────
    "pydantic-ai>=0.0.14",
    "anthropic>=0.40.0",

    # ── Routing / observability ───────────────────────────────────
    "litellm[proxy]>=1.50.0",

    # ── Retrieval ─────────────────────────────────────────────────
    "rank-bm25>=0.2.2",                      # in-memory BM25; corpus is small enough (~17MB raw)

    # ── Config / IO ───────────────────────────────────────────────
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

# spaCy models aren't on PyPI; they're hosted by Explosion as wheels on
# GitHub releases. Pinning here means `uv sync` re-installs them rather
# than pruning them as orphans.
[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["horcrux"]

# ── Ruff ──────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "C90",  # mccabe complexity
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# `assert` and magic-value comparisons are idiomatic in tests.
"tests/**" = ["S101", "PLR2004"]
# Exploratory scripts: assert + magic values are fine; lazy heavy imports
# inside main() (PLC0415) and ad-hoc lambdas (E731) are pragmatic here.
"scripts/**" = ["S101", "PLR2004", "PLC0415", "E731"]

# ── Pytest ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated, no external services",
    "integration: hits local Qdrant / Temporal / LiteLLM proxy",
    "smoke: end-to-end sanity checks against a running stack",
]
testpaths = ["tests"]
